--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-clicky-game",
+  "homepage": "https://ekeoid.github.io/react-clicky-game",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
@@ -32,5 +32,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ekeoid.github.io/react-clicky-game"
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
